infrastructure/envoy-gateway/gateway-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    labels:
      gateway.logic3579.io/scope: external
    annotations:
      networking.gke.io/load-balancer-ip-addresses: external-envoy-gateway-ip
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.example.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.example.com"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: example-wildcard-secret
      allowedRoutes:
        namespaces:
          from: All
